Added jquery-ui datepicker and range selector.

--- a/article.html
+++ b/article.html
@@ -20,7 +20,9 @@
     <meta name="msapplication-config" content="./images/favico/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <title>Akta</title>
+    <!-- JqueryUI -->
 
+    <link href="./css/jquery-ui.min.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <!-- Font awesome icons CSS -->
@@ -926,9 +928,8 @@
 
     <!-- Bootstrap core JavaScript  -->
     <script src="./js/jquery.min.js"></script>
-    <script>
-        window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
-    </script>
+
+    <script src="./js/jquery-ui.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
