Najnovije vijesti, tabs made darker, equally spread.

--- a/index.html
+++ b/index.html
@@ -492,9 +492,9 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-12 card ">
-                            <h2 class="module-label top5"><span>TOP 5 VIJESTI</span></h2>
+                            <h2 class="module-label top5"><span>TOP 5 VIJESTI</span></h2>                          
                             <div id="exTab3" class="tabs_module">
-                                <ul class="nav nav-pills tabs">
+                                <ul class="nav nav-justified nav-pills tabs">
                                     <li class="active">
                                         <a href="#1b" data-toggle="tab">Najnovije</a>
                                     </li>
@@ -504,7 +504,7 @@
                                     <li>
                                         <a href="#3b" data-toggle="tab">Ne propustite</a>
                                     </li>
-                                </ul>
+                                    </ul>
                                 <div class="tab-content clearfix">
                                     <div class="tab-pane active" id="1b">
                                         <div class="card-opis-vijesti">
