Fixed "važenje tendera"

--- a/tenderi-rezultat-pretrage.html
+++ b/tenderi-rezultat-pretrage.html
@@ -534,7 +534,7 @@
 
                                         <li class="collapsed" data-target="#vazenje" data-toggle="collapse">
                                             <a href="#">
-                                                <strong>Važnje tendera </strong> <span class="arrow"></span></a>
+                                                <strong>Važenje tendera </strong> <span class="arrow"></span></a>
                                         </li>
                                         <div id="vazenje" class="sub-menu collapse">
                                             <label class="cek">
