Replaced "Tenderi" widget titles with links.

--- a/index.html
+++ b/index.html
@@ -735,19 +735,15 @@
                             <h2 class="module-label tenderi"><span>TENDERI</span></h2>
                             <div class="card-opis-vijesti">
                                 <li>
-                                    <p class="card-kategorija">Vijesti / SVIJET</p>
-                                    <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                    <h1 class="card-naslov-vijesti"><a href="#">Objavljeni tenderi</a></h1>
                                 </li>
                                 <li>
-                                    <p class="card-kategorija">Vijesti / SVIJET</p>
-                                    <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                    <h1 class="card-naslov-vijesti"><a href="#">Pobjednici na tenderima</a></h1>
                                 </li>
                                 <li>
-                                    <p class="card-kategorija">Vijesti / SVIJET</p>
-                                    <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                    <h1 class="card-naslov-vijesti"><a href="#">Legislativa</a></h1>
                                 </li>
-                                <p class="card-kategorija">Vijesti / SVIJET</p>
-                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                    <h1 class="card-naslov-vijesti"><a href="#">Prodaja potraživanja</a></h1>
                                 <div class="card-count-label">
                                     <p>Više tekstova TENDERI</p>
                                 </div>
