"Registar widget" replaced titiles with links

--- a/index.html
+++ b/index.html
@@ -743,10 +743,13 @@
                                 <li>
                                     <h1 class="card-naslov-vijesti"><a href="#">Legislativa</a></h1>
                                 </li>
+                                <li>
                                     <h1 class="card-naslov-vijesti"><a href="#">Prodaja potraživanja</a></h1>
-                                <div class="card-count-label">
+                                </li>
+
+                               <!-- <div class="card-count-label">
                                     <p>Više tekstova TENDERI</p>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                         <div class="col-xs-12 card card-vijest">
@@ -955,13 +958,17 @@
                     <div id="moduli-wrap" class="row ">
                         <div class="col-xs-12 card card-vijest card-registar">
                             <h2 class="module-label"><span>REGISTAR</span></h2>
-                            <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic3.jpg">
                             <div class="card-opis-vijesti">
-                                <p class="card-kategorija">Vijesti / SVIJET</p>
-                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                <div class="card-count-label">
-                                    <p>Više tekstova REGISTAR</p>
-                                </div>
+                                <li>
+                                    <h1 class="card-naslov-vijesti"><a href="#">Kompanije i institucije</a></h1>
+                                </li>
+                                <li>
+                                    <h1 class="card-naslov-vijesti"><a href="#">Menadžerske pozicije</a></h1>
+                                </li>
+                                <li>
+                                    <h1 class="card-naslov-vijesti"><a href="#">Kolumne</a></h1>
+                                </li>
+                                
                             </div>
                         </div>
                         <div class="col-xs-12 card card-newsletter card-vijest konvertor-valuta kreditni-kalk">
