Changed "Berze widget" layout

--- a/index.html
+++ b/index.html
@@ -870,14 +870,14 @@
                                 </ul>
                                 <div class="tab-content clearfix lista-berze">
                                     <div class="tab-pane active" id="berzesase">
-                                        <span class="datum" id="datum">2.11.2016.</span>
+                                        <span class="label-kursnetabele" >Najveći rast</span>
                                         <table class="table table-hover kursna-lista-tabela">
                                             <thead>
                                                 <tr>
-                                                    <th>Zemlja</th>
-                                                    <th>Šifra valute</th>
-                                                    <th>Oznaka valute</th>
-                                                    <th>Srednji kurs</th>
+                                                    <th>Eminent</th>
+                                                    <th>Eminent promjena</th>
+                                                    <th>Kurs</th>
+                                                    <th>Promet</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -886,31 +886,57 @@
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
+                                                </tr>                                               
+                                            </tbody>
+                                        </table>
+                                         <span class="label-kursnetabele">Najveći pad</span>
+                                        <table class="table table-hover kursna-lista-tabela">
+                                            <thead>
+                                                <tr>
+                                                    <th>Eminent</th>
+                                                    <th>Eminent promjena</th>
+                                                    <th>Kurs</th>
+                                                    <th>Promet</th>
                                                 </tr>
+                                            </thead>
+                                            <tbody>
                                                 <tr>
                                                     <td>EMU </td>
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
+                                                </tr>                                               
+                                            </tbody>
+                                        </table>
+                                        <span class="label-kursnetabele">Najveći promet</span>
+                                        <table class="table table-hover kursna-lista-tabela">
+                                            <thead>
+                                                <tr>
+                                                    <th>Eminent</th>
+                                                    <th>Eminent promjena</th>
+                                                    <th>Kurs</th>
+                                                    <th>Promet</th>
                                                 </tr>
+                                            </thead>
+                                            <tbody>
                                                 <tr>
                                                     <td>EMU </td>
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
-                                                </tr>
+                                                </tr>                                               
                                             </tbody>
                                         </table>
                                     </div>
                                     <div class="tab-pane" id="berzeblse">
-                                        <span class="datum" id="datum">19.10.2016.</span>
+                                        <span class="label-kursnetabele" >Najveći rast</span>
                                         <table class="table table-hover kursna-lista-tabela">
                                             <thead>
                                                 <tr>
-                                                    <th>Zemlja</th>
-                                                    <th>Šifra valute</th>
-                                                    <th>Oznaka valute</th>
-                                                    <th>Srednji kurs</th>
+                                                    <th>Eminent</th>
+                                                    <th>Eminent promjena</th>
+                                                    <th>Kurs</th>
+                                                    <th>Promet</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -919,19 +945,45 @@
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
+                                                </tr>                                               
+                                            </tbody>
+                                        </table>
+                                         <span class="label-kursnetabele">Najveći pad</span>
+                                        <table class="table table-hover kursna-lista-tabela">
+                                            <thead>
+                                                <tr>
+                                                    <th>Eminent</th>
+                                                    <th>Eminent promjena</th>
+                                                    <th>Kurs</th>
+                                                    <th>Promet</th>
                                                 </tr>
+                                            </thead>
+                                            <tbody>
                                                 <tr>
                                                     <td>EMU </td>
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
+                                                </tr>                                               
+                                            </tbody>
+                                        </table>
+                                        <span class="label-kursnetabele">Najveći promet</span>
+                                        <table class="table table-hover kursna-lista-tabela">
+                                            <thead>
+                                                <tr>
+                                                    <th>Eminent</th>
+                                                    <th>Eminent promjena</th>
+                                                    <th>Kurs</th>
+                                                    <th>Promet</th>
                                                 </tr>
+                                            </thead>
+                                            <tbody>
                                                 <tr>
                                                     <td>EMU </td>
                                                     <td>978 </td>
                                                     <td>EUR </td>
                                                     <td>1,95583</td>
-                                                </tr>
+                                                </tr>                                               
                                             </tbody>
                                         </table>
                                     </div>
