Added footer contents. (?!)

--- a/tenderi-rezultat-pretrage.html
+++ b/tenderi-rezultat-pretrage.html
@@ -1003,6 +1003,7 @@
                         <p>
                             Copyright © 2016 akta.ba Sva prava zadržana.
                         </p>
+                        <p>Zabranjeno preuzimanje sadržaja bez dozvole izdavača. Ova elektronska serijska publikacija registrovana je pod ISSN brojem:  ISSN 1986-6968 (Online)</p>
                     </div>
                 </div>
             </div>
