--- a/tenderi-rezultat-pretrage.html
+++ b/tenderi-rezultat-pretrage.html
@@ -625,8 +625,120 @@
                     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 card ">
                         <div class="card-opis-vijesti">
                             <h1 class="card-naslov-vijesti">Rezultati pretrage</h1>
-                            <p><br>
-                            </p>
+                            <div class="form-group nopadding">
+                                <div class="col-md-4 nopadding">
+                                    <select class="form-control" placeholder="Poredaj po">
+                                            <option value="poredaj">Poredaj po</option>
+                                            <option value="poredaj">Poredaj po</option>
+                                            <option value="poredaj">Poredaj po</option>
+                                            <option value="poredaj">Poredaj po</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-4 pull-right nopadding">
+                                    <button type="submit" class="btn btn-filter-refresh">
+                                                PREGLED SAČUVANIH TENDERA <i class="fa fa-bookmark"></i> 
+                                            </button>
+                                </div>
+                                <div class="col-xs-12 nopadding lista-rezultata-pretrage">
+                                    <hr>
+                                    <li>
+                                        <p class="card-kategorija tender-lista tender-lista-datum lista-rezultati"><span class="datum-tendera">28.10.2016.</span><span class="naslov-tendera">Izvođenje radova na rekonstrukciji ograde objekta ATC Rakovica </span></p>
+                                        <p class="rezultati-ikone">
+                                            <span class="bookmark-tendera"><a href="#" class=""><i class="fa fa-bookmark"></i></a></span>
+                                            <span class="kratak-rok ">
+                                                <i class="fa fa-lg fa-exclamation"></i><br>KRATAK<br>ROK
+                                            </span>
+                                        </p>
+                                        <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                    </li>
+                                    <li>
+                                        <p class="card-kategorija tender-lista tender-lista-datum lista-rezultati"><span class="datum-tendera">28.10.2016.</span><span class="naslov-tendera">Izvođenje radova na adaptaciji prostora za smještaj TK opreme RSU 2 Koševsko Brdo u naselju Ciglane, Sarajevo</span></p>
+                                        <p class="rezultati-ikone">
+                                            <span class="bookmark-tendera"><a href="#" class=""><i class="fa fa-bookmark"></i></a></span>
+                                            <span class="kratak-rok upozorenje">
+                                                <i class="fa fa-lg fa-exclamation"></i><br>KRATAK<br>ROK
+                                            </span>
+                                        </p>
+                                        <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                    </li>
+                                    <li>
+                                        <p class="card-kategorija tender-lista tender-lista-datum lista-rezultati"><span class="datum-tendera">28.10.2016.</span><span class="naslov-tendera">Nabavka kancelarijskog materijala, sitnog inventara i kancelarijskog papira</span></p>
+                                        <p class="rezultati-ikone">
+                                            <span class="bookmark-tendera"><a href="#" class=""><i class="fa fa-bookmark"></i></a></span>
+                                            <span class="kratak-rok">
+                                                <i class="fa fa-lg fa-exclamation"></i><br>KRATAK<br>ROK
+                                            </span>
+                                        </p>
+                                        <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                    </li>
+                                    <li>
+                                        <p class="card-kategorija tender-lista tender-lista-datum lista-rezultati"><span class="datum-tendera">28.10.2016.</span><span class="naslov-tendera">Javni poziv ovlaštenim distributerima mobilnih uređaja proizvođača CAT i SONY </span></p>
+                                        <p class="rezultati-ikone">
+                                            <span class="bookmark-tendera"><a href="#" class=""><i class="fa fa-bookmark"></i></a></span>
+                                            <span class="kratak-rok">
+                                                <i class="fa fa-lg fa-exclamation"></i><br>KRATAK<br>ROK
+                                            </span>
+                                        </p>
+                                        <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                    </li>
+                                    <li>
+                                        <p class="card-kategorija tender-lista tender-lista-datum lista-rezultati"><span class="datum-tendera">28.10.2016.</span><span class="naslov-tendera">Izvođenje radova na adaptaciji i opremanju prostora za Telecom Centar Travnik II u Travniku </span></p>
+                                        <p class="rezultati-ikone">
+                                            <span class="bookmark-tendera"><a href="#" class=""><i class="fa fa-bookmark"></i></a></span>
+                                            <span class="kratak-rok upozorenje">
+                                                <i class="fa fa-lg fa-exclamation"></i><br>KRATAK<br>ROK
+                                            </span>
+                                        </p>
+                                        <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                    </li>
+                                    <li>
+                                        <p class="card-kategorija tender-lista tender-lista-datum lista-rezultati"><span class="datum-tendera">28.10.2016.</span><span class="naslov-tendera">Nabavka SAP test data migration servera </span></p>
+                                        <p class="rezultati-ikone">
+                                            <span class="bookmark-tendera"><a href="#" class=""><i class="fa fa-bookmark"></i></a></span>
+                                            <span class="kratak-rok ">
+                                                <i class="fa fa-lg fa-exclamation"></i><br>KRATAK<br>ROK
+                                            </span>
+                                        </p>
+                                        <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                    </li>
+                                    <li>
+                                        <p class="card-kategorija tender-lista tender-lista-datum lista-rezultati"><span class="datum-tendera">28.10.2016.</span><span class="naslov-tendera">Nabavka usluga osiguranja motornih i priključnih vozila Dioničkog društva BH Telecom Sarajevo, za period 01.01.2017.-31.12.2017. godine </span></p>
+                                        <p class="rezultati-ikone">
+                                            <span class="bookmark-tendera"><a href="#" class=""><i class="fa fa-bookmark"></i></a></span>
+                                            <span class="kratak-rok upozorenje">
+                                                <i class="fa fa-lg fa-exclamation"></i><br>KRATAK<br>ROK
+                                            </span>
+                                        </p>
+                                        <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                    </li>
+                                    <li>
+                                        <p class="card-kategorija tender-lista tender-lista-datum lista-rezultati"><span class="datum-tendera">28.10.2016.</span><span class="naslov-tendera">Nabavka rezervnih jedinica RR sistema proizvođača CERAGON </span></p>
+                                        <p class="rezultati-ikone">
+                                            <span class="bookmark-tendera"><a href="#" class=""><i class="fa fa-bookmark"></i></a></span>
+                                            <span class="kratak-rok ">
+                                                <i class="fa fa-lg fa-exclamation"></i><br>KRATAK<br>ROK
+                                            </span>
+                                        </p>
+                                        <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                    </li>
+                                    <li>
+                                        <p class="card-kategorija tender-lista tender-lista-datum lista-rezultati"><span class="datum-tendera">28.10.2016.</span><span class="naslov-tendera"> (produženje roka) Nabavka usluga osiguranja imovine društva </span></p>
+                                        <p class="rezultati-ikone">
+                                            <span class="bookmark-tendera"><a href="#" class=""><i class="fa fa-bookmark"></i></a></span>
+                                            <span class="kratak-rok upozorenje">
+                                                <i class="fa fa-lg fa-exclamation"></i><br>KRATAK<br>ROK
+                                            </span>
+                                        </p>
+                                        <p class="card-kategorija tender-lista tender-lista-datum-vazenja">(važi do 17.11.2016.)</p>
+                                    </li>
+                                    <ul class="list-pagination">
+                                        <li><button type="submit" class="btn btn-filter-refresh">1</button></li>
+                                        <li><button type="submit" class="btn btn-filter-refresh">2</button></li>
+                                        <li><button type="submit" class="btn btn-filter-refresh">3</button></li>
+                                    </ul>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -1003,7 +1115,7 @@
                         <p>
                             Copyright © 2016 akta.ba Sva prava zadržana.
                         </p>
-                        <p>Zabranjeno preuzimanje sadržaja bez dozvole izdavača. Ova elektronska serijska publikacija registrovana je pod ISSN brojem:  ISSN 1986-6968 (Online)</p>
+                        <p>Zabranjeno preuzimanje sadržaja bez dozvole izdavača. Ova elektronska serijska publikacija registrovana je pod ISSN brojem: ISSN 1986-6968 (Online)</p>
                     </div>
                 </div>
             </div>
