--- a/tenderi-rezultat-pretrage.html
+++ b/tenderi-rezultat-pretrage.html
@@ -338,7 +338,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-12 row-istih-visina nopadding">
+                <div class="col-md-12  nopadding">
                     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 card ">
                         <div class="card-opis-vijesti">
                             <h1 class="card-naslov-vijesti">Kategorije za pretragu tendera</h1>
