"Dodatne kategorije" removed.

--- a/tenderi-rezultat-pretrage.html
+++ b/tenderi-rezultat-pretrage.html
@@ -607,7 +607,7 @@
                                                 Osvježi pretragu <i class="fa fa-repeat"></i> 
                                             </button>
                                         </div>
-                                        <li class="collapsed tenderski" data-target="#dodatneKat" data-toggle="collapse">
+                                        <!-- <li class="collapsed tenderski" data-target="#dodatneKat" data-toggle="collapse">
                                             <a href="#"> <strong>Dodatne kategorije </strong> </a>
                                         </li>
                                         <div id="dodatneKat" class="sub-menu collapse">
@@ -615,7 +615,7 @@
                                             <button type="submit" class="btn btn-filter-refresh">
                                                 Osvježi pretragu <i class="fa fa-repeat"></i> 
                                             </button>
-                                        </div>
+                                        </div> -->
 
                                     </ul>
                                 </div>
